# ai-coding-tools-course

./: .gitignore  README.md
.claude/: settings.local.json
.cursor/commands/: rename-reports.md  smart-commit.md
.cursor/skills/citation-cleanup/: SKILL.md
.cursor/skills/fact-checker/: SKILL.md
.cursor/skills/readme-sync/: SKILL.md
course-materials/workflows/: copilot-complete-crud-workflow.md
deep-research-reports/: agentic-ide-tools-comparison.md  agentic-software-engineering-report.md  documentation-tools.md  enhancement-ecosystem.md  llm-constraints-software-engineering.md  llm-risks-research.md  local-only-setups-FACT-CHECK.md  local-only-setups.md  model-context-protocol.md  sovereign-local-llm-ecosystems.md  tool-claude-code.md  tool-cursor.md  tool-github-copilot.md
example-api/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
example-api/src/example_api/: __init__.py  main.py
example-api/tests/: conftest.py  test_api.py
prompts/: research-tool.md  slides.md
research/foundations/: agentic-ide-tools-comparison.md  agentic-software-engineering-report.md
research/solutions/: enhancement-ecosystem.md
research/support/: documentation-tools.md
research/tools/: tool-claude-code.md
tools-workflows/: README.md
