[project]
name = "example-api"
version = "0.1.0"
description = "Simple FastAPI example application"
readme = "README.md"
authors = [
    { name = "Andres Garcia Mangas", email = "andres.garcia@fundacionctic.org" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
